<resources>
    <string name="app_name">FirstProject_eat</string>
    <string name="email_hint">insert email</string>
    <string name="password_hint">insert password</string>
    <string name="login">LOGIN</string>
    <string name="login_lowercase">Login</string>
    <string name="register">REGISTER</string>
    <string name="telephone_number_hint">insert telephone number</string>
    <string name="checkout">Checkout</string>
    <string name="menu">MENU</string>
    <string name="min_order">Min. order </string>
    <string name="total">TOTAL</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="quantity_0">0</string>
    <string name="price_tv">Price</string>
    <string name="order_summary">Order summary</string>
    <string name="pay">PAY</string>
    <string name="alert_negative">Can\'t remove this product. Total should be less than min order</string>
    <string name="ok">OK</string>
    <string name="alert">Are you sure you want to remove the product?</string>
    <string name="alert_yes">YES</string>
    <string name="alert_no">NO</string>
    <string name="credits">Developed by <u>@Chek993</u></string>
    <string name="github_link">https://github.com/chek993</string>
    <string name="username_hint">insert username</string>
    <string name="profile">Profile</string>
</resources>
