<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="105dp"
    android:id="@+id/products_card_view"
    android:layout_margin="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/product_iv"
            android:layout_width="100dp"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/product_name_tv"
            android:layout_toEndOf="@+id/product_iv"
            android:layout_marginStart="10dp"
            android:layout_toStartOf="@+id/select_ll"
            android:textStyle="bold"
            android:textSize="18dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/product_description_tv"
            android:layout_alignStart="@+id/product_name_tv"
            android:layout_below="@+id/product_name_tv"
            android:layout_marginTop="5dp"
            android:layout_toStartOf="@+id/select_ll"
            android:layout_above="@+id/price_tv"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/price_tv"
            android:layout_alignStart="@+id/product_name_tv"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_alignParentBottom="true"
            android:text="@string/price_tv"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/product_price_tv"
            android:layout_toEndOf="@+id/price_tv"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/select_ll"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp">

            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="@string/minus"
                android:id="@+id/minus_btn"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/product_quantity_tv"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/quantity_0"/>

            <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="@string/plus"
                android:id="@+id/plus_btn"/>

        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>


