<?xml version="1.0" encoding="utf-8"?>

<!--
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:elevation="4dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/order_summary_tv"
            android:padding="20dp"
            android:text="@string/order_summary"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/restaurant_info_rl"
            android:layout_below="@+id/order_summary_tv"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/restaurant_name_tv"
                android:textStyle="bold"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/restaurant_address_tv"
                android:layout_below="@+id/restaurant_name_tv"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/product_rv"
        android:layout_below="@+id/restaurant_info_rl"
        android:padding="5dp">

    </android.support.v7.widget.RecyclerView>

    <

</RelativeLayout>
-->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/header"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_summary"
            style="@style/Base.TextAppearance.AppCompat.Body2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/restaurant_name_tv"
            style="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/restaurant_address_tv"
            style="@style/TextAppearance.AppCompat.Subhead"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDivider">

        </View>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/product_rv"
        android:layout_below="@+id/header">

    </android.support.v7.widget.RecyclerView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/total_tv"
        android:layout_below="@+id/product_rv"
        android:text="@string/total"
        style="@style/TextAppearance.AppCompat.Title"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pay_btn"
        android:layout_alignParentBottom="true"
        style="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
        android:textColor="@color/colorPrimaryText"
        android:background="@color/colorAccent"
        android:text="@string/pay"/>

</RelativeLayout>